<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout style="@style/linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/edit_text"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout style="@style/linear_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity" />

        <Button
            android:id="@+id/decrease"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/text_quantity"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/zero" />

        <Button
            android:id="@+id/increase"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout style="@style/linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />

        <EditText
            android:id="@+id/price_edit_text"
            style="@style/edit_text"
            android:inputType="number" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/select_imag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/order" />
    </RelativeLayout>

</LinearLayout>
