<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            style="@style/view"
            tools:text="name" />

        <TextView
            android:id="@+id/quantity"
            style="@style/view"
            tools:text="@string/quantity" />

        <TextView
            android:id="@+id/price"
            style="@style/view"
            tools:text="@string/price" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="false"
        android:layout_gravity="center"
        android:focusableInTouchMode="false"
        android:text="@string/sale" />

</LinearLayout>